tests/error_corpus/validation_errors/not_implemented/E242_unbalanced_quotation.cha
@UTF8
@Begin
@Languages:	eng
@Participants:	CHI Target_Child
@ID:	eng|corpus|CHI|||||Target_Child|||
@Comment:	ERROR: Quotation marks must be balanced
@Comment:	Invalid: '"hello' - Missing closing quote
*CHI:	"hello .
@End
