tests/error_corpus/parse_errors/E323_missing_colon.cha
@Begin
@Languages:	eng
@Participants:	CHI Child
@ID:	eng|corpus|CHI|||||Child|||
@Comment:	ERROR: Speaker must be followed by colon
@Comment:	Invalid: '*CHI hello' - Missing colon
*CHI hello .
@End
